# his-course-design

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: admins.txt  beds.txt  departments.txt  doctors.txt  drugs.txt  exams.txt  hospitalizations.txt  patients.txt  pharmacies.txt  pharmacy_drugs.txt  prescriptions.txt  registrations.txt  visits.txt  wards.txt
docs/: 题签.doc
include/core/: auth.h  config.h  session.h  sha256.h  structs.h  utils.h
include/model/: analytics.h  bed.h  department.h  doctor.h  drug.h  exam.h  hospitalization.h  medical.h  patient.h  prescription.h  registration.h  visit.h  ward.h
include/ui/: menu.h
src/core/: auth.c  config.c  main.c  session.c  sha256.c  utils.c
src/model/: analytics.c  bed.c  department.c  doctor.c  drug.c  exam.c  hospitalization.c  medical.c  patient.c  prescription.c  registration.c  visit.c  ward.c
src/ui/: menu.c
tools/: gen_data.py
